@@ -5,6 +5,7 @@ Update primary Hadoop support to 2.6.0.
 Update primary Pig to 0.14.0.
 Update primary Spark to 1.2.0.  Add appropriate patches for support.
 Update primary Hbase to 0.98.9.
+Add new magpie-apache-download-and-setup.sh convenience script.
 
 magpie 1.50
 -----------
